--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "lib": "lib"
   },
   "scripts": {
+    "lint": "eslint **/*.js",
     "test": "jest --verbose --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^6.4.0",
+    "eslint": "^6.7.2",
     "jest": "^24.9.0"
   },
   "dependencies": {
